# FRC2025

./: .gitignore  Installation.md  README.md  pyproject.toml
docs/: NewCommandRecipe.md  NewSubsystemRecipe.md  git.md
src/robot/: pyproject.toml  robot_container.py
src/robot/commands/: drive_with_joystick_command.py
src/robot/constants/: sharktypes.py
src/robot/subsystems/: drive_subsystem.py  swerve_module.py
src/sharkbot/: README.md  robotsystems.py  sharkbot.py
src/sharkbot/commands/: autonomous_command.py  command_template_python.txt
src/sharkbot/commands/climber/: diagnoseclimber.py  extendclimber.py  holdclimberposition.py  retractclimber.py
src/sharkbot/commands/drive/: diagnosedrive.py  drivetoposition.py  drivewithjoysticks.py
src/sharkbot/commands/driverstation/: drivercontrol.py  gunnercontrol.py
src/sharkbot/commands/shooter/: diagnoseshooter.py  idleshooter.py  shoot.py  spinupshooter.py  stopshooter.py
src/sharkbot/commands/vision/: diagnosevision.py  passivevision.py  updateodometryfromvision.py
src/sharkbot/components/: swervemodule.py
src/sharkbot/constants/: autonomousconstants.py  climberconstants.py  driveconstants.py  operatorinterfaceconstants.py  robotconstants.py  shooterconstants.py  visionconstants.py
src/sharkbot/subsystems/: climber.py  drive.py  driverstation.py  shooter.py  vision.py
src/sharkbot/tests/: test_stopshootercommand.py  testcontrollerbindings.py
src/sharkbot/util/: ntloggerutility.py
src/test/motor_test_command/: robot.py  robotsystems.py
src/test/motor_test_command/commands/: commands.py
(+2 files in other folders)
